# anthropic-multi-agent-demo

./: .env.example  CODING_STANDARDS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  research.py  research_full.py  research_mock.py  setup.sh  test_basic.py  test_system.py  validate_standards.py
src/: __init__.py  research_system.py  research_system_simple.py
src/agents/: base_agent.py  citation_agent.py  orchestrator.py  research_agent.py  web_search_agent.py
src/coordination/: __init__.py  memory_manager.py  task_coordinator.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_research_system.py
